--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ DB_PORT=3306
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
+
+LLM_API_KEY=
+LLM_BASE_URL=https://api.groq.com/openai/v1
+LLM_MODEL=llama-3.1-8b-instant
