--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fastify": "^5.7.2",
     "mysql2": "^3.16.2",
     "pino-pretty": "^13.1.3",
+    "toad-cache": "^3.7.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
